Atualizando páginas de Configurações dos drops da bloodmoon e da página de categoria de mobs. Aumentando a qualidade de vida do mod.